# karnaboo

./: Cargo.toml  LICENSE  README.md  config  docker-compose.yml  repo-sources.yml  script_bank.yml
karnaboo-agent/: Cargo.toml
karnaboo-agent/src/: commandline.rs  localsystem.rs  main.rs  networking.rs
karnaboo-server/: Cargo.toml  Rocket.toml  config  repo-sources.yml  script_bank.yml
karnaboo-server/config/: karnaboo.conf  repo-sources.yml  script_bank.yml
karnaboo-server/src/: cli.rs  commands.rs  configuration.rs  database.rs  enforce.rs  handlerequests.rs  main.rs  networking.rs  webgui.rs
karnaboo-server/src/commands/: mod.rs
karnaboo-server/templates/: index.html.tera  mystyle.css  style.css
