[package]
name = "karnaboo-server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = "0.5.4"
colored = "2.0.4"
config = "0.13.3"
futures = "0.3.29"
rand = "0.8.5"
rustyline = "12.0.0"
serde = {version="1.0.190", features= ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
